# intent-based-ansible-lab

./: .4l2s.clab.yml.bak  .aliases.rc  .devcontainer.json  .gitignore  4l2s.clab.yaml  4l2s.clab.yml  CHANGELOG.md  README.md  ansible.cfg  cf_fabric.yml  get_info.yml  nornir_config.yaml  pyproject.toml  reboot_fabric.yml  requirements.txt  topo.clab.yml  topo.clab.yml.annotations.json  topo.yml  topo_with_sros.clab.yml  topo_with_sros.yml  upgrade_fabric.yml
intent/: README  infra
intent/bgp_unnumbered/: group_infra.yml
intent/dcgw_test/: fabric.yml  l2vpn.yml  l3vpn_2001.yml
intent/fabric_test/: fabric.yml  group_infra.yml
intent/services/: l2vpn  l3vpn
intent/test/: group_infra.yml  l3vpn_2001.yml  l3vpn_2002.yml  mh_access.yml
intent_examples/services/: host_infra_itf_tags.yml  l2vpn_101.yml  l2vpn_101bis.yml  l2vpn_102.yml  l3vpn_2001.yml  mh_access-1.yml  mh_access-2.yml  mh_access-3.yml
intents/l2_fabric/: fabric.yml
inv/: ansible-inventory.yml
inv/group_vars/: srl.yml  sros.yml
inv/host_vars/: clab-4l2s-l1.yml  clab-4l2s-l2.yml  clab-4l2s-l3.yml  clab-4l2s-l4.yml  clab-4l2s-s1.yaml  (+2 more)
inv_with_dcgw/: ansible-inventory.yml
netbox-inv-template/: netbox.yml
playbooks/: augment_l3vpn_intent.yml  cf_fabric.yml  netbox_generate_intents.yml  upgrade_fabric.yml
tests/: add_contact.yml  add_contact2.yml  delete_contact.yml  force_config.yml  fred.json  get_config.yml  inv  mac_vrf_subinterface.yml  mac_vrf_subinterface_bad.yml  remove_mac_vrf_subinterface.yml  replace_jsonrpcserver.yml  svc1.j2  test.yml  val_contact.json  variable_contact.json.j2
(+273 files in other folders)
